[gd_scene load_steps=20 format=2]

[ext_resource path="res://Fonts/tres/DeterminationS32White.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes&Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Sprites/MainMenuBackgrounds/1/4.png" type="Texture" id=3]
[ext_resource path="res://Sprites/MainMenuBackgrounds/1/3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Logos/UndertaleOnlineMonsterFontBetter.png" type="Texture" id=5]
[ext_resource path="res://Sprites/MainMenuBackgrounds/1/1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/MainMenuBackgrounds/1/2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/MainMenuBackgrounds/2/1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/MainMenuBackgrounds/2/2.png" type="Texture" id=10]
[ext_resource path="res://Sprites/MainMenuBackgrounds/2/4.png" type="Texture" id=11]
[ext_resource path="res://Sprites/MainMenuBackgrounds/2/3.png" type="Texture" id=12]
[ext_resource path="res://GlobalScenes/SoulPlayer.tscn" type="PackedScene" id=13]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
length = 16.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4, 6, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.348077 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.999447 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4, 14, 16 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 6, 8, 10, 12 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("4:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 10, 12, 14, 16 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("1:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 4, 14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 6, 12 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("4:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 10, 16 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "MoveLeft"
length = 11.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 11 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 320 ), Vector2( 0, 320 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "MoveLeft"
length = 16.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 960, 320 ), Vector2( -320, 320 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "MoveLeft"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 320 ), Vector2( 0, 320 ) ]
}

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/blur_amount = 0.5

[sub_resource type="Animation" id=4]
resource_name = "SlideUp"
length = 3.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 320, 550 ), Vector2( 320, 157 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../t_1:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 550 ), Vector2( 240, 550 ), Vector2( 240, 200 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../t_2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 264, 550 ), Vector2( 264, 550 ), Vector2( 264, 260 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../t_3:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.4, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 288, 550 ), Vector2( 288, 550 ), Vector2( 288, 320 ) ]
}

[node name="1" type="Node2D"]
script = ExtResource( 2 )

[node name="Layer1" type="Control" parent="."]
visible = false
margin_left = 160.0
margin_top = 30.0
margin_right = 800.0
margin_bottom = 510.0
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Layer1"]
autoplay = "Fade"
anims/Fade = SubResource( 1 )

[node name="1" type="Sprite" parent="Layer1"]
position = Vector2( 320, 240 )
texture = ExtResource( 6 )

[node name="2" type="Sprite" parent="Layer1"]
visible = false
modulate = Color( 1, 1, 1, 0.348077 )
position = Vector2( 320, 240 )
texture = ExtResource( 7 )

[node name="3" type="Sprite" parent="Layer1"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 320, 240 )
texture = ExtResource( 4 )

[node name="4" type="Sprite" parent="Layer1"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 320, 240 )
texture = ExtResource( 3 )

[node name="Layer2" type="Control" parent="."]
margin_left = 160.0
margin_top = 30.0
margin_right = 800.0
margin_bottom = 510.0

[node name="Background" type="Control" parent="Layer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.0
margin_bottom = -30.0

[node name="1" type="Sprite" parent="Layer2/Background"]
position = Vector2( 640, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="2" type="Sprite" parent="Layer2/Background"]
position = Vector2( 640, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="Move" type="AnimationPlayer" parent="Layer2/Background/2"]
autoplay = "MoveLeft"
anims/MoveLeft = SubResource( 5 )

[node name="3" type="Sprite" parent="Layer2/Background"]
position = Vector2( 960, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="Move" type="AnimationPlayer" parent="Layer2/Background/3"]
autoplay = "MoveLeft"
anims/MoveLeft = SubResource( 6 )

[node name="4" type="Sprite" parent="Layer2/Background"]
position = Vector2( 640, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Move" type="AnimationPlayer" parent="Layer2/Background/4"]
autoplay = "MoveLeft"
anims/MoveLeft = SubResource( 7 )

[node name="Layer3" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="Layer3"]
material = SubResource( 3 )
anchor_bottom = 0.004
margin_left = 160.0
margin_top = 30.0
margin_right = 800.0
margin_bottom = 508.08
__meta__ = {
"_edit_lock_": true
}

[node name="Layer4" type="Control" parent="."]
margin_left = 160.0
margin_top = 30.0
margin_right = 800.0
margin_bottom = 510.0
__meta__ = {
"_edit_lock_": true
}

[node name="Labels" type="Control" parent="Layer4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -7.0
margin_bottom = -7.0

[node name="Title" type="Sprite" parent="Layer4/Labels"]
position = Vector2( 320, 550 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="Menu" type="AnimationPlayer" parent="Layer4/Labels/Title"]
autoplay = "SlideUp"
anims/SlideUp = SubResource( 4 )

[node name="t_1" type="Label" parent="Layer4/Labels"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 310.0
margin_right = 80.0
margin_bottom = 343.0
custom_fonts/font = ExtResource( 1 )
text = "Start Game"
align = 1
valign = 1

[node name="t_2" type="Label" parent="Layer4/Labels"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = 310.0
margin_right = 56.0
margin_bottom = 343.0
custom_fonts/font = ExtResource( 1 )
text = "Options"
align = 1
valign = 1

[node name="t_3" type="Label" parent="Layer4/Labels"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 310.0
margin_right = 32.0
margin_bottom = 343.0
custom_fonts/font = ExtResource( 1 )
text = "Quit"
align = 1
valign = 1

[node name="SoulPlayer" parent="Layer4" instance=ExtResource( 13 )]
position = Vector2( 224, 210 )

[node name="MoveSoul" type="Tween" parent="."]
playback_speed = 5.0
playback/speed = 5.0

[connection signal="animation_finished" from="Layer4/Labels/Title/Menu" to="." method="_on_Menu_animation_finished"]
